--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera</title>
+	<title>Hello coursera 1</title>
 </head>
 <body>
-<h1>Hello coursera!It is a great course</h1>
+<h1>Hello coursera!It is a great course 1</h1>
 </body>
 </html>
